--- a/service-ahmadi.html
+++ b/service-ahmadi.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>مقالات نقل عفش في الكويت | حور - نقل عفش الكويت</title>
-  <meta name="description" content="مقالات نقل عفش في الكويت - نصائح وتوجيهات شاملة لنقل الأثاث بأسعار منافسة وجودة عالية">
-  <meta name="keywords" content="مقالات نقل عفش في الكويت, نصائح نقل عفش, دليل نقل عفش, معلومات نقل عفش, مقالات حور, نصائح التغليف, دليل النقل السريع, النقل الموسمي, نقل المكاتب, مقالات مفيدة, معلومات مفيدة, نصائح عملية, دليل شامل, مرجع نقل, تعليمات النقل">
+  <title>نقل عفش الأحمدي | أفضل شركة نقل عفش في الأحمدي - حور</title>
+  <meta name="description" content="نقل عفش الأحمدي بأفضل الأسعار - خدمات نقل وتغليف متكاملة في منطقة الأحمدي مع فريق محترف ومدرب. فك وتركيب، تغليف آمن، نقل سريع.">
+  <meta name="keywords" content="نقل عفش الأحمدي, شركة نقل عفش الأحمدي, نقل أثاث الأحمدي, فك وتركيب الأحمدي, تغليف عفش الأحمدي, نقل سريع الأحمدي, خدمات نقل الأحمدي, أفضل شركة نقل الأحمدي, نقل عفش رخيص الأحمدي, نقل عفش محترف الأحمدي">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -53,8 +53,8 @@
   <!-- ======= Hero Section ======= -->
   <section class="article-header">
     <div class="container">
-      <h1 data-aos="fade-up">خدمات نقل وتغليف متكاملة</h1>
-      <p data-aos="fade-up" data-aos-delay="100">نقل آثاثك بأمان وسرعة مع فريق محترف ومدرب</p>
+      <h1 data-aos="fade-up">نقل عفش الأحمدي - خدمات نقل وتغليف متكاملة</h1>
+      <p data-aos="fade-up" data-aos-delay="100">نقل آثاثك في منطقة الأحمدي بأمان وسرعة مع فريق محترف ومدرب - أفضل أسعار نقل عفش الأحمدي</p>
     </div>
   </section>
 
@@ -62,32 +62,32 @@
   <section id="services" class="services section-bg">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>خدماتنا</h2>
-        <p>نقدم مجموعة متكاملة من خدمات النقل والتغليف</p>
+        <h2>خدمات نقل عفش الأحمدي</h2>
+        <p>نقدم أفضل خدمات نقل وتغليف العفش في منطقة الأحمدي مع ضمان الجودة والأمان</p>
       </div>
 
       <div class="row">
         <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="100">
           <div class="service-feature">
             <i class="bi bi-box-seam"></i>
-            <h3>فك وتركيب</h3>
-            <p>فك وتركيب الأثاث باحترافية باستخدام أحدث الأدوات</p>
+            <h3>فك وتركيب في الأحمدي</h3>
+            <p>فك وتركيب الأثاث باحترافية في منطقة الأحمدي باستخدام أحدث الأدوات المتخصصة</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="200">
           <div class="service-feature">
             <i class="bi bi-shield-check"></i>
-            <h3>تغليف آمن</h3>
-            <p>تغليف الأثاث بمواد عالية الجودة للحماية الكاملة</p>
+            <h3>تغليف آمن للعفش</h3>
+            <p>تغليف الأثاث بمواد عالية الجودة للحماية الكاملة أثناء النقل في الأحمدي</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-3" data-aos="zoom-in" data-aos-delay="300">
           <div class="service-feature">
             <i class="bi bi-truck"></i>
-            <h3>نقل آمن</h3>
-            <p>نقل الأثاث بسيارات مجهزة ومغطاة ضد العوامل الخارجية</p>
+            <h3>نقل آمن في الأحمدي</h3>
+            <p>نقل الأثاث بسيارات مجهزة ومغطاة ضد العوامل الخارجية في جميع أنحاء منطقة الأحمدي</p>
           </div>
         </div>
 
@@ -106,8 +106,8 @@
   <section id="articles" class="articles">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>المقالات</h2>
-        <p>أحدث المقالات والنصائح حول نقل وتغليف الأثاث</p>
+        <h2>نصائح نقل عفش الأحمدي</h2>
+        <p>أفضل النصائح والمقالات حول نقل وتغليف الأثاث في منطقة الأحمدي</p>
       </div>
 
       <div class="row">
@@ -116,8 +116,8 @@
           <div class="article-card">
             <img src="assets/img/moving1.jpg" class="article-img" alt="خدمة نقل أثاث احترافية في الكويت - فريق حور المتخصص">
             <div class="article-body">
-              <h3>نقل آثاثك بأمان وسرعة مع فريق محترف</h3>
-              <p>في عالم سريع الخطى، يصبح نقل الآثاث تحديًا كبيرًا للكثيرين. مع خدماتنا المتكاملة، نضمن لك نقلًا آمنًا وسريعًا دون أي خسائر أو تلف. فريقنا المدرب جيدًا يقوم بجميع المراحل بدءًا من الفك والتغليف، مرورًا بالنقل، ووصولًا إلى التركيب في المكان الجديد.</p>
+              <h3>نقل عفش الأحمدي بأمان وسرعة</h3>
+              <p>في منطقة الأحمدي الصناعية، يصبح نقل الآثاث تحديًا كبيرًا للكثيرين. مع خدماتنا المتكاملة في الأحمدي، نضمن لك نقلًا آمنًا وسريعًا دون أي خسائر أو تلف. فريقنا المدرب جيدًا في منطقة الأحمدي يقوم بجميع المراحل بدءًا من الفك والتغليف، مرورًا بالنقل، ووصولًا إلى التركيب في المكان الجديد.</p>
               <a href="#" class="btn btn-primary">قراءة المزيد</a>
             </div>
           </div>
@@ -128,8 +128,8 @@
           <div class="article-card">
             <img src="assets/img/packing.jpg" class="article-img" alt="تغليف أثاث آمن ومحترف - مواد عالية الجودة من حور">
             <div class="article-body">
-              <h3>لماذا تختار فريقنا لنقل وتغليف أثاثك؟</h3>
-              <p>يمتلك فريقنا سنوات من الخبرة في مجال نقل وتغليف الآثاث، مما يجعلك في أيدٍ أمينة. نقدم حلولًا شاملة تشمل الفك والتركيب بأدوات متخصصة، تغليف بمواد عالية الجودة، نقل بواسطة سيارات مجهزة، وتركيب في المكان الجديد بدقة واحترافية.</p>
+              <h3>لماذا تختار حور لنقل عفش الأحمدي؟</h3>
+              <p>يمتلك فريقنا سنوات من الخبرة في مجال نقل وتغليف الآثاث في منطقة الأحمدي، مما يجعلك في أيدٍ أمينة. نقدم حلولًا شاملة في الأحمدي تشمل الفك والتركيب بأدوات متخصصة، تغليف بمواد عالية الجودة، نقل بواسطة سيارات مجهزة، وتركيب في المكان الجديد بدقة واحترافية.</p>
               <a href="#" class="btn btn-primary">قراءة المزيد</a>
             </div>
           </div>
@@ -140,8 +140,8 @@
           <div class="article-card">
             <img src="assets/img/furniture-care.jpg" class="article-img" alt="حماية الأثاث أثناء النقل - نصائح من خبراء حور">
             <div class="article-body">
-              <h3>كيف تحافظ على أثاثك أثناء النقل؟</h3>
-              <p>النقل الآمن للآثاث يتطلب أكثر من مجرد وضع القطع في سيارة. إليك بعض النصائح من خبرائنا: الفك الصحيح باستخدام الأدوات المناسبة، التغليف الجيد باستخدام الفقاعات والورق المقوى، والتخزين المؤقت بوضع القطع الثقيلة في الأسفل والخفيفة في الأعلى.</p>
+              <h3>نصائح نقل عفش آمن في الأحمدي</h3>
+              <p>النقل الآمن للآثاث في منطقة الأحمدي يتطلب أكثر من مجرد وضع القطع في سيارة. إليك بعض النصائح من خبرائنا في الأحمدي: الفك الصحيح باستخدام الأدوات المناسبة، التغليف الجيد باستخدام الفقاعات والورق المقوى، والتخزين المؤقت بوضع القطع الثقيلة في الأسفل والخفيفة في الأعلى.</p>
               <a href="#" class="btn btn-primary">قراءة المزيد</a>
             </div>
           </div>
@@ -156,8 +156,8 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="section-title text-center">
-            <h2>مقالات أخرى مفيدة</h2>
-            <p>اكتشف المزيد من النصائح والخبرات في نقل العفش</p>
+            <h2>مقالات مفيدة لنقل عفش الأحمدي</h2>
+            <p>اكتشف المزيد من النصائح والخبرات في نقل العفش في منطقة الأحمدي</p>
           </div>
         </div>
       </div>
@@ -212,8 +212,8 @@
       <div class="row mt-5">
         <div class="col-lg-12">
           <div class="section-title text-center">
-            <h3>خدماتنا المتخصصة</h3>
-            <p>اكتشف خدماتنا المتكاملة في نقل العفش</p>
+            <h3>خدماتنا المتخصصة في الأحمدي</h3>
+            <p>اكتشف خدماتنا المتكاملة في نقل العفش في منطقة الأحمدي</p>
           </div>
         </div>
       </div>
@@ -265,15 +265,15 @@
   <section id="contact" class="contact section-bg">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
-        <h2>اتصل بنا</h2>
-        <p>تواصل معنا اليوم واحصل على أفضل خدمات النقل</p>
+        <h2>اتصل بنا لنقل عفش الأحمدي</h2>
+        <p>تواصل معنا اليوم واحصل على أفضل خدمات نقل عفش في منطقة الأحمدي</p>
       </div>
 
       <div class="row justify-content-center">
         <div class="col-lg-8">
           <div class="contact-box">
-            <h3>نحن جاهزون لخدمتك</h3>
-            <p>اتصل بنا الآن واحصل على استشارة مجانية</p>
+            <h3>نحن جاهزون لنقل عفش الأحمدي</h3>
+            <p>اتصل بنا الآن واحصل على استشارة مجانية لنقل عفش في منطقة الأحمدي</p>
             <div class="contact-number">
               <i class="bi bi-phone"></i> 66401171
             </div>
@@ -348,10 +348,24 @@
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "حور - نقل عفش الكويت",
-      "@id": "https://naqlafsha-hoor.com/",
-      "url": "https://naqlafsha-hoor.com/",
+      "@type": "LocalBusiness",
+      "name": "حور - نقل عفش الأحمدي",
+      "@id": "https://naqlafsha-hoor.com/service-ahmadi.html",
+      "url": "https://naqlafsha-hoor.com/service-ahmadi.html",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "الأحمدي",
+        "addressCountry": "الكويت"
+      },
+      "serviceArea": {
+        "@type": "GeoCircle",
+        "geoMidpoint": {
+          "@type": "GeoCoordinates",
+          "latitude": "29.0833",
+          "longitude": "48.0833"
+        },
+        "geoRadius": "12000"
+      },
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://naqlafsha-hoor.com/?s={search_term_string}",
